--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
     <string name="app_name">Calculator</string>
     <string name="action_settings">Settings</string>
+    <string name="action_about">About</string>
     <string name="divide_sign">÷</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="description">A test calculator supports addition, subtraction, multiplication and division</string>
 </resources>
